--- a/feedback.html
+++ b/feedback.html
@@ -3,10 +3,10 @@
     <head>
         <meta  charset="UTF-8"/>
         <meta name="keywords" content="test, site, website"/>
-        <meta name="description" content="This site is about me"/>
+        <meta name="description" content="feedback"/>
         <link rel="stylesheet" href="css/style.css"type="text/css"/>
         <link rel="shortcut icon" href="img/mini.png" type="image/x-icon"/>
-        <title>Сontacts</title>
+        <title>Feedback</title>
     </head>
     <body>
        <div id="page-wrap">
@@ -29,39 +29,18 @@
         </center>
         <div id="wrapper">
             <div id="arcticles">
-                <article>
-                       <a href="https://vk.com/feed">
-                        <img src="img/vk.jpg" alt="Image" title="VK"/>
-                         <img src="img/vk-1.jpg" alt="Image" title="VK"/>
-                       </a>
-                </article>
-                  <article>
-                         <a href="https://www.facebook.com/" title="Facebook">
-                          <img src="img/facebook.png" alt="Image" title="facebook"/> 
-                          <img src="img/facebook-1.jpg" alt="Image" title="facebook"/> 
-                      </a>
-                </article>
-                  <article>
-                      <a href="https://www.linkedin.com/in/%D1%81%D0%B5%D1%80%D0%B3%D1%96%D0%B9-%D0%B1%D1%83%D0%BA-246b4b11a?trk=nav_responsive_tab_profile" title="Linkedin">
-                           <img src="img/linkedin.jpg" alt="Image" title="Linkedin"/>
-                            <img src="img/linked.jpeg" alt="Image" title="Linkedin"/>
-                      </a>
-                </article>
+              <form action="" method="post">
+                  <label for="subject">Theme for message</label>
+                  <input type="text" id="subject" name="subject" placeholder="Theme for message"/>
+                    <label for="email">Enter your Email</label>
+                  <input type="email"id="email" name="email" placeholder="adress@example.com"/>
+                    <label for="name">Enter your name</label>
+                  <input type="text"id="name" name="name" placeholder="Enter your name"/>
+                   <label for="message">Enter your message</label>
+                  <textarea  placeholder="Enter your message"id="message" name="message"></textarea>
+                  <input type="submit"value="Send"id="send" name="send" />
+              </form>
             </div>
-            <div class="clear">
-            <div id="main_soc_block">
-               <center>
-                <div id="main_soc_block_in">
-                      <h3>Feedback</h3>
-                    <p>Ask questions and demand i always answer</p>
-                    <a href="feedback.html" title="Feedback">Feedback</a>
-                </div>
-                </center>
-            </div>
-            </div>
-            <div id="arcticles">
-            </div>
-            <div class="clear"><br /></div>
         </div>
         </div>
         
