--- a/gal.html
+++ b/gal.html
@@ -1,59 +1,83 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="gal.css"/>
+        <meta  charset="UTF-8"/>
+        <meta name="keywords" content="test, site, website"/>
+        <meta name="description" content="This site is about me"/>
+        <link rel="stylesheet" href="css/style.css"type="text/css"/>
+        <link rel="shortcut icon" href="img/mini.png" type="image/x-icon"/>
         <title>Gallery</title>
     </head>
     <body>
-    <header>
-    <nav id="menu"> </nav><hr>
-    <nav id="menuHref">
-      <a href="index.html">Home</a>
-      <a href="educ.html">Educations</a>
-      <a href="gal.html">Gallery</a>
-      <a href="hobb.html">Hobbies</a>
-      <a href="cont.html">Contacts</a>
-    </nav>
-    </header><br><br>
-    <nav>  <h1>My gallery and my family</h1></nav><hr><br>
-      <div id="one">
-          <article>
-              <img src="1.jpg" alt="foto" title="foto">
-          </article>
-      </div>
-      <div id="two">
-          <article>
-              <img src="2.jpg" alt="foto" title="foto">
-          </article>
-      </div>
-       <div id="thre">
-          <article>
-              <img src="3.jpg" alt="foto" title="foto">
-          </article>
-      </div>
-      <div id="four">
-          <article>
-              <img src="4.jpg" alt="foto" title="foto">
-          </article>
-      </div>
-      <div id="five">
-          <article>
-              <img src="5.jpg" alt="foto" title="foto">
-          </article>
-      </div>
-      <div id="six">
-          <article>
-              <img src="6.jpg" alt="foto" title="foto">
-          </article>
-      </div>
-    
-    <footer>
-        <span class="left">Copyright &copy; 2016</span>
+       <div id="page-wrap">
+        <header>
+          <a href="index.html" title="Home" id="logo">Home</a> 
+          <span class="contact"><a href="about.html" title="Information about me">About me</a></span>
+          <input type="text" class="field" placeholder="Let's help to find"/> 
+          <span class="right"><span class="contact"><a href="feedback.html" title="Feedback">Feedback</a></span>
+          </span>
+        </header>
+        <div class="clear"><br /></div>
+        <center>
+            <div id="menu">Sections<hr /></div>
+            <div id="menuHref">
+                <a href="educ.html">Education</a>
+                <a href="hobb.html">Hobby</a>
+                <a href="gal.html">Gallery</a>
+                <a href="cont.html">Сontacts</a>
+            </div>
+        </center>
+        <div id="wrapper">
+            <div id="arcticles">
+                <article>
+                   <img src="img/fam-11.jpg" alt="Image" title="Family"/>
+                      <img src="img/fam-12.jpg" alt="Image" title="Family"/>
+                </article>
+                  <article>
+                        <img src="img/fam-9.jpg" alt="Image" title="Family"/>
+                      <img src="img/fam-10.jpg" alt="Image" title="Family"/>
+                </article>
+                  <article>
+                       <img src="img/fam-7.jpg" alt="Image" title="Family"/>
+                      <img src="img/fam-8.jpg" alt="Image" title="Family"/>
+                </article>
+            </div>
+            <div class="clear">
+            <div id="main_soc_block">
+               <center>
+                <div id="main_soc_block_in">
+                      <h3>Feedback</h3>
+                    <p>Ask questions and demand i always answer</p>
+                    <a href="feedback.html"title="Feedback">Feedback</a>
+                </div>
+                </center>
+            </div>
+            </div>
+            <div id="arcticles">
+                <article>
+                    <img src="img/fam_1.jpg" alt="Image" title="Family"/>
+                     <img src="img/fam-2.jpg" alt="Image"title="Family"/>
+                </article>
+                  <article>
+                      <img src="img/fam-3.jpg" alt="Image" title="Family"/>
+                      <img src="img/fam-4.jpg" alt="Image" title="Family"/>
+                </article>
+                  <article>
+                      <img src="img/fam-5.jpg" alt="Image" title="Family"/>
+                      <img src="img/fam-6.jpg" alt="Image" title="Family"/>
+                </article>
+            </div>
+            <div class="clear"><br /></div>
+        </div>
+        </div>
+        
+        <footer>
+           <span class="left">Copiryght &copy; 2016</span>
            <span class="right">Social buttons
-             <img src="Facebook_.png" alt="Facebook Group" title="Facebook Group"/>
-             <img src="youtube.png" alt="YouTube" title="Come to YouTube">
+             <img src="img/Facebook_.png" alt="Facebook Group" title="Facebook Group"/>
+             <img src="img/youtube.png" alt="YouTube" title="Come to YouTube">
+             <img src="img/linkedin.png" alt="YouTube" title="Come to Linkedin">
            </span>
-    </footer>
+        </footer>
     </body>
 </html>
