--- a/hobb.html
+++ b/hobb.html
@@ -1,52 +1,74 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="hobb.css"/>
-    <title>test-site</title>
-</head>
-<body>
-   <header>
-    <nav id="menu"> </nav><hr>
-    <nav id="menuHref">
-      <a href="index.html">Home</a>
-      <a href="educ.html">Educations</a>
-      <a href="gal.html">Gallery</a>
-      <a href="hobb.html">Hobbies</a>
-      <a href="cont.html">Contacts</a>
-    </nav>
-    </header><br><br>
-    <nav>  <h1>My hobbies and interests...</h1></nav><hr><br>
-     <nav>  <h1>Firs of all my greatest hobbi and interest is my family,<br><br> and the rest later!</h1></nav><hr>
-    </header>
-      
-       <section>
-        <div class="sport">
-           <h3>Sport</h3>
-          <p>In the sport i most prefer love football,<br>like running with friends,<br>and wath on TV or play on the consol.<br>Root for two teams swich as<br>
-          Karpaty Lviv and Tottenham Hotspurs.</p>
+    <head>
+        <meta  charset="UTF-8"/>
+        <meta name="keywords" content="test, site, website"/>
+        <meta name="description" content="This site is about me"/>
+        <link rel="stylesheet" href="css/style.css"type="text/css"/>
+        <link rel="shortcut icon" href="img/mini.png" type="image/x-icon"/>
+        <title>Hobby</title>
+    </head>
+    <body>
+       <div id="page-wrap">
+        <header>
+          <a href="index.html" title="Home" id="logo">Home</a> 
+          <span class="contact"><a href="about.html"title="Information about me">About me</a></span>
+          <input type="text" class="field" placeholder="Let's help to find"/> 
+          <span class="right"><span class="contact"><a href="feedback.html"title="Feedback">Feedback</a></span>
+          </span>
+        </header>
+        <div class="clear"><br /></div>
+        <center>
+            <div id="menu">Sections<hr /></div>
+            <div id="menuHref">
+                <a href="educ.html">Education</a>
+                <a href="hobb.html">Hobby</a>
+                <a href="gal.html">Gallery</a>
+                <a href="cont.html">Сontacts</a>
+            </div>
+        </center>
+        <div id="wrapper">
+            <div id="arcticles">
+                <article>
+                         <img src="img/footbal.jpg" alt="Image" title="footbal"/>
+                         <p>One of the best hobby for me is football.
+                         I play football with my friends and fan of teams of Ukraine and England.
+                         And also when there is the opportunity to play football with friends on the console....</b></p>
+                </article>
+                  <article>
+                         <img src="img/travel.jpg" alt="Image" title="Travel"/>
+                         <p>Traveling with a family that could be better!
+                         New impressions, emotions, and continuous positive spending time with his family!</p>
+                </article>
+                  <article>
+                      <img src="img/bowling.jpg" alt="Image" title="Bowling"/>
+                       <p>My wife and i love to go to Bowling.
+                       We get a lot of new experiences and positive emotions.
+                       <b>And especially when playing with friends and win it really feel one team!</b></p>
+                </article>
+            </div>
+            <div class="clear">
+            <div id="main_soc_block">
+               <center>
+                <div id="main_soc_block_in">
+                      <h3>Feedback</h3>
+                    <p>Ask questions and demand i always answer</p>
+                    <a href="feedback.html"title="Feedback">Feedback</a>
+                </div>
+                </center>
+            </div>
+            </div>
+            <div class="clear"><br /></div>
         </div>
-     </section>
-     <section>
-        <div class="mus">
-           <h3>Music</h3>
-             <p>Music is different,but is likes the most<br>pop and dance,but mostly is depends<br>on my mood...</p><hr>
-           <h3>Films</h3>
-               <p>Prefers films such as genres:<br>Comedy,Horror,Drama,Triller and Adventure</p>
-           </section>
-           <section>
-               <div class="res">
-                   <h3>The resent very cool and enjoy...</h3>
-                   <p>I never tought that computers<br>and i are compatible way!<br>But my friends and i pushed<br> them for that very grateful!<br>
-                   Sow many new opportunites are<br>suchthat it is a sin not to use.</p>
-               </div>
-           </section>
-    <footer>
-        <span class="left">Copyright &copy; 2016</span>
+        </div>
+        
+        <footer>
+           <span class="left">Copiryght &copy; 2016</span>
            <span class="right">Social buttons
-             <img src="Facebook_.png" alt="Facebook Group" title="Facebook Group"/>
-             <img src="youtube.png" alt="YouTube" title="Come to YouTube">
+             <img src="img/Facebook_.png" alt="Facebook Group" title="Facebook Group"/>
+             <img src="img/youtube.png" alt="YouTube" title="Come to YouTube">
+             <img src="img/linkedin.png" alt="YouTube" title="Come to Linkedin">
            </span>
-    </footer>
-</body>
+        </footer>
+    </body>
 </html>
